@@ -103,7 +103,7 @@ public class CohortServiceTest {
 
     private final String NAME4 = "Height";
 
-    UserDetails approvedUser = UserDetails.builder().userId("approvedUserId").approved(true).build();
+    private UserDetails approvedUser = UserDetails.builder().userId("approvedUserId").approved(true).build();
 
     @Test(expected = ResourceNotFound.class)
     public void shouldHandleMissingCohortWhenRetrieving() {
@@ -485,7 +485,7 @@ public class CohortServiceTest {
                         .build())
                 .build();
         TemplateSizeRequestDto requestDto = TemplateSizeRequestDto.builder()
-                .templateIds(Arrays.asList("Alter"))
+                .templateIds(List.of("Alter"))
                 .cohortDto(cohortDto)
                 .build();
         when(cohortExecutor.execute(any(Cohort.class), Mockito.eq(false)))
@@ -501,7 +501,7 @@ public class CohortServiceTest {
     public void getCohortGroupSizeWithDistributionTest() {
         CohortAqlDto cohortAqlDto = CohortAqlDto.builder().id(1L).name(NAME1).query(Q1).build();
         CohortGroupDto groupDto = CohortGroupDto.builder().type(Type.AQL).query(cohortAqlDto).build();
-        Mockito.when(contentService.getClinics(approvedUser.getUserId())).thenReturn(Arrays.asList("clinic one"));
+        Mockito.when(contentService.getClinics(approvedUser.getUserId())).thenReturn(List.of("clinic one"));
         QueryResponseData responseData1 = new QueryResponseData();
         responseData1.setRows(  List.of(
                 new ArrayList<>(List.of("ehr-id-1", Map.of("_type", "OBSERVATION", "uuid", "12"))),
